Restructured mc support, templatized Queue, added CommandSelector module

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@
 /src/MicrocontrollerSupport/MicrocontrollerSupport/*.vcxproj*
 /src/MicrocontrollerSupport/MicrocontrollerSupport/Debug/
 /src/MicrocontrollerSupport/Debug/
+!/src/Arduino/*.ino
