Integrated command selector with arduino code

--- a/.gitignore
+++ b/.gitignore
@@ -3,4 +3,6 @@
 /src/MicrocontrollerSupport/MicrocontrollerSupport/*.vcxproj*
 /src/MicrocontrollerSupport/MicrocontrollerSupport/Debug/
 /src/MicrocontrollerSupport/Debug/
-!/src/Arduino/*.ino
+
+/src/Arduino/MotorController/*
+!/src/Arduino/MotorController/*.ino
